# SlicerVolumeProjection

./: CMakeLists.txt  README.md
VolumeProjection/: CMakeLists.txt  VolumeProjection.py
VolumeProjection/Resources/UI/: VolumeProjection.ui
